# oz

./: .clang-format  .clangformat  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md
bee/resources/shaders/: CMakeLists.txt
bee/src/: CMakeLists.txt
bee/src/bee/: bee.h
bee/src/bee/core/: Window.cpp  Window.h
bee/src/bee/gfx/vulkan/: Vulkan.h  VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.h  vk_base.h  vk_helpers.cpp  vk_helpers.h
bee/src/bee/platform/vulkan/: Context.cpp  Context.h  Vulkan.cpp  Vulkan.h  common.h
oz/: CMakeLists.txt
oz/resources/shaders/: CMakeLists.txt
oz/resources/shaders/glsl/: uniform.vert
oz/src/: CMakeLists.txt  main.cpp
oz/src/bee/: base.h
oz/src/bee/gfx/vulkan/: vk_helpers.h
oz/src/oz/: base.h  common.h
oz/src/oz/core/: Window.cpp  core.h
oz/src/oz/core/file/: dir_utils.h  file.cpp  file.h  file_utils.h
oz/src/oz/core/window/: Window.cpp  Window.h
oz/src/oz/gfx/: gfx.h
oz/src/oz/gfx/vulkan/: CommandBuffer.cpp  CommandBuffer.h  Dev.h  GraphicsDevice.cpp  GraphicsDevice.h  Vulkan.h  VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.h  common.h  dir_helpers.h  enums.h  graphics_device.cpp  graphics_device.h  objects.h  objects_internal.h  property_structs.h  vk_base.h  vk_common.h  vk_data.h  vk_enums.h  vk_funcs.cpp  vk_funcs.h  vk_helpers.cpp  vk_helpers.h  vk_objects.h  vk_objects_internal.h  vk_property_structs.h  vk_types.h  vk_utils.cpp  vk_utils.h
